<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_rule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/question"
        android:layout_below="@id/score"
        android:layout_above="@id/answer1"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="165dp"
        android:textColor="@android:color/white"
        android:fallbackLineSpacing="true"
        android:text="@string/button1" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_above="@id/answer3"
        android:layout_marginBottom="110dp"
        android:text="@string/button2" />
    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/answer4"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="55dp"
        android:text="@string/button3" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/button4" />




</RelativeLayout>